--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
+  dio: ^5.5.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
