--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   dio: ^5.5.0+1
+  get_it: ^7.7.0
+  flutter_bloc: ^8.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
