--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   dio: ^5.5.0+1
   get_it: ^7.7.0
   flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  talker_flutter: ^4.3.4
+  hive: ^2.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
